--- a/client/package.json
+++ b/client/package.json
@@ -3,17 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aos": "^2.3.4",
+    "eslint": "^5.16.0",
+    "flow-bin": "^0.105.2",
+    "jquery": "^3.5.1",
+    "jquery.stellar": "github:markdalgleish/stellar.js#v0.6.2",
     "react": "^16.9.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.4",
-    "aos": "^2.3.4",
-    "eslint": "^5.16.0",
-    "flow-bin": "^0.105.2",
-    "jquery": "^3.4.1",
-    "jquery.stellar": "github:markdalgleish/stellar.js#v0.6.2",
     "socket.io": "^2.2.0",
     "websocket": "^1.0.29"
   },
